[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cd-ai-back-end"
version = "0.1.0"
description = "Class Design AI backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.123.9",
    "uvicorn>=0.38.0",
    "alembic==1.12.1",
    "pymysql==1.1.0",
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings==2.1.0",
    "requests>=2.32.0",
    "Pillow>=12.0.0",
    "python-dateutil==2.8.2",
    "loguru==0.7.2",
]
